Fixed secondary navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,38 @@ body{
     
 }
 
+.btn-group {
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.btn {
+    background-color: white;
+    border: none;
+    border-right: 1px solid black;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-right: 40px;
+    font-weight: bold;
+    color:
+    rgb(112, 35, 240);
+    text-decoration: none;
+    font-size: 0.875rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-right {
+    background-color: white;
+    border: none;
+    padding-right: 0px;
+    font-weight: bold;
+    color:
+    rgb(112, 35, 240);
+    text-decoration: none;
+    font-size: 0.875rem;
+}
+
 .quick_link {
     color:
     rgb(112, 35, 240);
@@ -51,8 +83,8 @@ body{
     padding-top: 15px;
     font-size: 0.875rem;
     height: 100%;
-    padding-right: 58px;
-    padding-left: 20px;
+    padding-right: 25px;
+    padding-left: 25px;
     font-weight: bold;
 }
 
@@ -64,6 +96,7 @@ body{
     padding-bottom: 15px;
     padding-top: 15px;
     font-weight: bold;
+    
 }
 
 
@@ -81,16 +114,7 @@ body{
     top: 200px;
 }
 
-.btn_container {
-    display: flex;
-    justify-content: space-around;
-    
-}
 
-.btn {
-    
-
-}
 
 
 font-weight: bold;
